@@ -1,3 +1,12 @@
+2011-12-17  Tom de Vries  <tom@codesourcery.com>
+
+	PR tree-optimization/51491
+	* tree-ssa-ccp.c (insert_clobber_before_stack_restore)
+	(gsi_prev_dom_bb_nondebug, insert_clobbers_for_var): New function.
+	(ccp_fold_stmt): Use insert_clobbers_for_var after a successful
+	fold_builtin_alloca_with_align.
+	(ccp_visit_stmt): Calculate and free dominator info.
+
 2011-12-16  Eric Botcazou  <ebotcazou@adacore.com>
 
 	* config/sparc/sparc.md (UNSPEC_FRAME_BLOCKAGE): New constant.
